# depth2scan

./: CMakeLists.txt  README.md  format.sh
apps/: depth2scan.cpp  depth2scan_kinect.cpp
depth2scan/: depth2scan.cpp  depth2scan.h
